build: refine published files in package.json and update Korean README.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     }
   },
   "files": [
-    "dist"
+    "dist/*.js",
+    "dist/*.mjs",
+    "dist/*.cjs",
+    "dist/*.d.ts",
+    "dist/*.map"
   ],
   "sideEffects": false,
   "scripts": {
